--- a/cryptopricepredicter/package.json
+++ b/cryptopricepredicter/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@tensorflow/tfjs": "^0.12.6",
+    "jquery": "^3.3.1",
     "react": "^16.4.2",
     "react-dom": "^16.4.2"
   },
