--- a/cryptopricepredicter/package.json
+++ b/cryptopricepredicter/package.json
@@ -39,6 +39,7 @@
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.2",
     "react-redux": "^6.0.0",
+    "redux": "^4.0.1",
     "resolve": "1.6.0",
     "sass-loader": "^7.1.0",
     "style-loader": "0.19.0",
