--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js:
   - "stable"
 
-script: cd ./cryptopredicter && npm run test
+script: cd ./cryptopricepredicter/ && npm run test
 
 branches:
   only:
